package edu.fiuba.algo3.modelo.jugadores;

public interface EstadoJugador {

    boolean estaVivo();

    EstadoJugador eliminar();
}
