@startuml
skinparam classAttributeIconSize 0

title Diagrama de clases - Jugadores

abstract class Rol {
    - bando : Bando
    + bandoReal() : Bando
    + bandoAparente() : Bando
    + {abstract} aceptar(TurnoNocturno);
    + {abstract} debatir(TurnoDebate)
}

class Ciudadano {
}

interface Victimario {
    + elegirVictima(Collection<Jugador>) : Jugador
}

Victimario <|.. Mafioso
class Mafioso {
    - complices : Collection<Jugador>
    + registrarComplices(Collection<Jugador>)
}

class Padrino {
    + bandoAparente() : Bando
}

class Detective {
    - ultimaInvestigacion : Jugador
}

class Sheriff implements ReveladorRol {
    - estado : EstadoSheriff
    + puedeDeclarar() : boolean
}

class SheriffDetective implements ReveladorRol {
    - estado : EstadoSheriff
    + puedeDeclarar() : boolean
}

ReveladorInvestigacion <|.. SheriffDetective
interface ReveladorInvestigacion {
    + revelarInvestigacion() : ResultadoInvestigacion
}

interface ReveladorRol {
    + revelarRol()
}

class Medico {
    - ultimaProteccion : Jugador
}

interface EstadoSheriff {
    + puedeDeclarar() : boolean
    + revelarRol()
}

class SinDeclararRol implements EstadoSheriff {
}

class RolDeclarado implements EstadoSheriff {
}

class Jugador {
    - nombre : String
    - carta : Rol
    - estado : EstadoJugador
    + Jugador(String: nombre, Rol: carta)
    + acusar(Collection<Jugador>) : Jugador
    + defender(Collection<Jugador>) : Jugador
    + nominar(Collection<Jugador>) : Jugador
    + votar(Collection<Jugador>) : Jugador
}

interface EstadoJugador {
    + puedeJugar() : boolean
    + eliminar()
}

interface Investigador {
    + investigar(Collection<Jugador>) : ResultadoInvestigacion
}

interface Protector {
    + proteger(Collection<Jugador>) : Jugador
}

Detective ...|> Investigador


EstadoJugador <|.. Vivo
EstadoJugador <|.. Eliminado

Protector <|.. Medico

Jugador *-- Rol
Jugador *- EstadoJugador
Rol <|-- Ciudadano
Rol <|-- Mafioso
Rol <|-- Medico
Rol <|--- Detective
Rol <|---- SheriffDetective
Rol <|---- Sheriff
Mafioso <|-- Padrino

SheriffDetective ...|> Investigador
SheriffDetective *-- EstadoSheriff
Sheriff *--- EstadoSheriff


@enduml